Fri Jan 20 19:30:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/Anyop/anyop.cpp:
          Use ACE_TEST_ASSERT instead of ACE_ASSERT to fix warnings in gcc 4.6
          release builds

Fri Jan 20 19:05:55 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/InterfaceRepo/IFR_Test/Admin_Client.cpp:
          Use ACE_TEST_ASSERT instead of ACE_ASSERT to fix warnings in gcc 4.6
          release builds

Fri Jan 20 19:01:04 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1670_Regression/Test.idl:
        * tests/Bug_1670_Regression/client.cpp:
        * tests/Bug_1670_Regression/run_test.pl:
        * tests/Bug_1670_Regression/server.cpp:
          Fixed gcc warning, added shutdown method to the server to get
          a clean shutdown without hundreds of valgrind errors

Fri Jan 20 18:50:58 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/Bug_2088/client.cpp:
          Fixed gcc warning

Fri Jan 20 18:46:22 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/UNKNOWN_Exception/client.cpp:
          Fixed memory leak and gcc warning

Fri Jan 20 10:30:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be/be_visitor_root/root_svth.cpp:
        * TAO_IDL/be_include/be_global.h:
        * docs/compiler.html:
          Changed the arguments a little bit more, -Ssvntc suppreses _svnt.cpp,
          -Ssvntt suppresses _svnt_T.{h,cpp}

Fri Jan 20 09:27:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
          Extended rules

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_produce.cpp:
        * TAO_IDL/be/be_util.cpp: